--- a/styles/index.less
+++ b/styles/index.less
@@ -1,3 +1,7 @@
 @import "~bootstrap/less/bootstrap.less";
 @import "~bootswatch/yeti/variables.less";
 @import "schemas";
+
+.height-all {
+  height: 100%;
+}
