--- a/styles/schemas.less
+++ b/styles/schemas.less
@@ -10,3 +10,15 @@
   background-image: url("../static/images/br009.png");
   background-size: cover;
 }
+.modal-block-img {
+  background-image: url("../static/images/refactored/br009.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 100%;
+}
+.modal-block-info {
+  height: 470px;
+}
+.block-content {
+  overflow-y: scroll;
+}
