--- a/styles/schemas.less
+++ b/styles/schemas.less
@@ -22,3 +22,11 @@
 .block-content {
   overflow-y: scroll;
 }
+
+
+.modal-info-image {
+  height: 450px;
+  float: left;
+  padding-right: 10px;
+  padding-bottom: 10px;
+}
