--- a/public/index.css
+++ b/public/index.css
@@ -6738,6 +6738,12 @@ button.close {
 .block-content {
   overflow-y: scroll;
 }
+.modal-info-image {
+  height: 450px;
+  float: left;
+  padding-right: 10px;
+  padding-bottom: 10px;
+}
 .height-all {
   height: 100%;
 }
