--- a/styles/schemas.less
+++ b/styles/schemas.less
@@ -16,17 +16,15 @@
   background-repeat: no-repeat;
   height: 100%;
 }
-.modal-block-info {
-  height: 470px;
-}
-.block-content {
-  overflow-y: scroll;
-}
-
 
 .modal-info-image {
   height: 450px;
   float: left;
   padding-right: 10px;
   padding-bottom: 10px;
+}
+
+.modal.in {
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
 }
