added dynamic content to popup

--- a/styles/schemas.less
+++ b/styles/schemas.less
@@ -6,16 +6,6 @@
     cursor: pointer;
   }
 }
-.br009 {
-  background-image: url("../static/images/br009.png");
-  background-size: cover;
-}
-.modal-block-img {
-  background-image: url("../static/images/refactored/br009.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  height: 100%;
-}
 
 .modal-info-image {
   height: 450px;
@@ -27,4 +17,8 @@
 .modal.in {
   -webkit-transform: translateZ(0);
   transform: translateZ(0);
+}
+
+.modal-footer {
+  clear: both;
 }
