--- a/public/index.css
+++ b/public/index.css
@@ -6722,28 +6722,22 @@ button.close {
 .schema-block:hover {
   cursor: pointer;
 }
-.br009 {
-  background-image: url(/military/public/images/br009.png);
-  background-size: cover;
-}
-.modal-block-img {
-  background-image: url(/military/public/images/br009.png);
-  background-size: contain;
-  background-repeat: no-repeat;
-  height: 100%;
-}
-.modal-block-info {
-  height: 470px;
-}
-.block-content {
-  overflow-y: scroll;
-}
 .modal-info-image {
-  height: 450px;
+  height: 550px;
   float: left;
   padding-right: 10px;
   padding-bottom: 10px;
 }
+.modal.in {
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+}
+.modal-footer {
+  clear: both;
+}
 .height-all {
   height: 100%;
+}
+body {
+  position: relative;
 }
