added bottom left blocks

--- a/src/components/schemas/blocks-data/text/br009.html
+++ b/src/components/schemas/blocks-data/text/br009.html
@@ -1,4 +1,4 @@
-<p>Блок БР-009 представляет собой двухканальный супергетеродинный при­ем­ник. Функциональная схема блока БР-009 изображена на рисунке 4.19.</p>
+<p>Блок БР-009 представляет собой двухканальный супергетеродинный при­ем­ник.</p>
 <p>В состав схемы блока БР-009 входят следующие субблоки:</p>
 <p>а) усилители высокой частоты (УВЧ) суммарного и разностного кана­лов;</p>
 <p>б) усилители промежуточной частоты (УПЧ) суммарного и разност­ного ка­налов;</p>
