added home component

--- a/styles/index.less
+++ b/styles/index.less
@@ -9,3 +9,12 @@
 body {
   position: relative;
 }
+
+.home-img {
+  margin: 50px auto 0 auto;
+  @size: 300px;
+  width: @size;
+  height: @size;
+  background: url('../static/images/airport.svg');
+  background-size: contain;
+}
