--- a/public/index.css
+++ b/public/index.css
@@ -6758,3 +6758,8 @@ button.close {
 body {
   position: relative;
 }
+.home-img {
+  margin: 50px auto 0 auto;
+  width: 300px;
+  height: 300px;
+}
