updated home page and added link to gitbook

--- a/styles/index.less
+++ b/styles/index.less
@@ -12,7 +12,11 @@ body {
 
 .home-img {
   margin: 50px auto 0 auto;
-  @size: 300px;
+  @size: 200px;
   width: @size;
   height: @size;
+}
+
+.home-heading {
+  text-align: center;
 }
