--- a/public/index.css
+++ b/public/index.css
@@ -6760,6 +6760,9 @@ body {
 }
 .home-img {
   margin: 50px auto 0 auto;
-  width: 300px;
-  height: 300px;
+  width: 200px;
+  height: 200px;
+}
+.home-heading {
+  text-align: center;
 }
