fixed header and home page

--- a/public/index.css
+++ b/public/index.css
@@ -5860,14 +5860,14 @@ button.close {
 }
 .modal.fade .modal-dialog {
   -webkit-transform: translate(0, -25%);
-  -ms-transform: translate(0, -25%);
   transform: translate(0, -25%);
   -webkit-transition: -webkit-transform 0.3s ease-out;
+  transition: -webkit-transform 0.3s ease-out;
   transition: transform 0.3s ease-out;
+  transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
 }
 .modal.in .modal-dialog {
   -webkit-transform: translate(0, 0);
-  -ms-transform: translate(0, 0);
   transform: translate(0, 0);
 }
 .modal-open .modal {
@@ -6226,7 +6226,9 @@ button.close {
 @media all and (transform-3d), (-webkit-transform-3d) {
   .carousel-inner > .item {
     -webkit-transition: -webkit-transform 0.6s ease-in-out;
+    transition: -webkit-transform 0.6s ease-in-out;
     transition: transform 0.6s ease-in-out;
+    transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     -webkit-perspective: 1000px;
@@ -6752,17 +6754,50 @@ button.close {
   width: 174px;
   float: left;
 }
+html,
+body {
+  height: 100%;
+}
 .height-all {
   height: 100%;
 }
 body {
   position: relative;
 }
+.home {
+  text-align: center;
+}
 .home-img {
   margin: 50px auto 0 auto;
   width: 200px;
   height: 200px;
+  background-size: contain;
 }
-.home-heading {
-  text-align: center;
+.header-logo {
+  width: 50px;
+  height: 50px;
+  margin: 0;
+  background-size: cover;
+}
+.header-logo:hover {
+  cursor: pointer;
+}
+.ebook {
+  position: absolute;
+  height: 100%;
+  padding-top: 50px;
+}
+.navbar {
+  position: absolute;
+  width: 100%;
+  z-index: 10;
+}
+.container {
+  padding-top: 60px;
+}
+.navbar .container {
+  padding-top: 0px;
+}
+.credentials {
+  text-align: left;
 }
