--- a/styles/index.less
+++ b/styles/index.less
@@ -2,6 +2,10 @@
 @import "~bootswatch/yeti/variables.less";
 @import "schemas";
 
+html, body {
+  height: 100%;
+}
+
 .height-all {
   height: 100%;
 }
@@ -10,13 +14,49 @@ body {
   position: relative;
 }
 
+.home {
+  text-align: center;
+}
+
 .home-img {
   margin: 50px auto 0 auto;
   @size: 200px;
   width: @size;
   height: @size;
+  background-size: contain;
 }
 
-.home-heading {
-  text-align: center;
+.header-logo {
+  @size: 50px;
+  width: @size;
+  height: @size;
+  margin: 0;
+  background-size: cover;
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.ebook {
+  position: absolute;
+  height: 100%;
+  padding-top: 50px;
+}
+
+.navbar {
+  position: absolute;
+  width: 100%;
+  z-index: 10;
+}
+
+.container {
+  padding-top: 60px;
+}
+
+.navbar .container {
+  padding-top: 0px;
+}
+
+.credentials {
+  text-align: left;
 }
