--- a/styles/index.less
+++ b/styles/index.less
@@ -31,7 +31,7 @@ p {
 }
 
 .header-logo {
-  @size: 50px;
+  @size: 45px;
   width: @size;
   height: @size;
   margin: 0;
@@ -68,4 +68,13 @@ p {
 .video {
   margin: 10px;
   width: 100%;
+}
+
+.pdf-container {
+  text-align: center;
+}
+
+.pdf-page-num {
+  font-size: 24px;
+  padding: 0 20px;
 }
