--- a/public/index.css
+++ b/public/index.css
@@ -6830,3 +6830,9 @@ p {
   font-size: 24px;
   padding: 0 20px;
 }
+.arrow-top {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  background: red;
+}
