--- a/styles/index.less
+++ b/styles/index.less
@@ -78,3 +78,10 @@ p {
   font-size: 24px;
   padding: 0 20px;
 }
+
+.arrow-top {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  background: red;
+}
